--- a/yapp/Preview/Base.lproj/Preview.xib
+++ b/yapp/Preview/Base.lproj/Preview.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="Preview" customModule="Y" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="Preview" customModule="YApp" customModuleProvider="target">
             <connections>
                 <outlet property="applicationValueLabel" destination="vfJ-eN-smJ" id="Bup-Ci-7Ed"/>
                 <outlet property="firstCopyTimeValueLabel" destination="2XE-55-cRR" id="KsJ-p4-71t"/>
