--- a/yapp/Application.xib
+++ b/yapp/Application.xib
@@ -11,7 +11,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="UnsafePointer"/>
-        <customObject id="qYj-xg-cp5" userLabel="Delegate" customClass="AppDelegate" customModule="Y" customModuleProvider="target">
+        <customObject id="qYj-xg-cp5" userLabel="Delegate" customClass="AppDelegate" customModule="YApp" customModuleProvider="target">
             <connections>
                 <outlet property="pasteMenuItem" destination="vN8-yt-ylS" id="2vu-Dm-hXA"/>
             </connections>
@@ -19,15 +19,15 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="Jro-eu-QeA">
             <items>
-                <menuItem title="Y" id="3CE-d6-uUV">
+                <menuItem title="YApp" id="3CE-d6-uUV">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Y" systemMenu="apple" id="S3O-il-PTi">
+                    <menu key="submenu" title="YApp" systemMenu="apple" id="S3O-il-PTi">
                         <items>
                             <menuItem title="Services" id="Yj7-3e-zP9">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Services" systemMenu="services" id="ywi-KJ-MUQ"/>
                             </menuItem>
-                            <menuItem title="Quit Y" keyEquivalent="q" id="RBB-k6-t5o">
+                            <menuItem title="Quit YApp" keyEquivalent="q" id="RBB-k6-t5o">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="k91-d6-t2E"/>
                                 </connections>
