--- a/yapp/MenuHeader/MenuHeader.xib
+++ b/yapp/MenuHeader/MenuHeader.xib
@@ -6,19 +6,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="MenuHeaderViewController" customModule="Y" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="MenuHeaderViewController" customModule="YApp" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY" customClass="MenuHeaderView" customModule="Y" customModuleProvider="target">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY" customClass="MenuHeaderView" customModule="YApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="358" height="28"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="S88-gz-je6">
                     <rect key="frame" x="12" y="3" width="50" height="22"/>
-                    <textFieldCell key="cell" lineBreakMode="clipping" title="Y" id="xzp-wK-dxe">
+                    <textFieldCell key="cell" lineBreakMode="clipping" title="YApp" id="xzp-wK-dxe">
                         <font key="font" metaFont="system" size="15"/>
                         <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
