--- a/yapp/Preferences/en.lproj/GeneralPreferenceViewController.xib
+++ b/yapp/Preferences/en.lproj/GeneralPreferenceViewController.xib
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="GeneralPreferenceViewController" customModule="Y" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="GeneralPreferenceViewController" customModule="YApp" customModuleProvider="target">
             <connections>
                 <outlet property="fuzzySearchButton" destination="bSe-xE-ADv" id="vlc-9R-NXB"/>
                 <outlet property="historySizeLabel" destination="YeY-GF-ivc" id="KGc-pi-4r9"/>
