--- a/YApp/MenuHeader/MenuHeader.xib
+++ b/YApp/MenuHeader/MenuHeader.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21507" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21507"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21701"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="358" height="28"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="S88-gz-je6">
-                    <rect key="frame" x="12" y="3" width="50" height="22"/>
+                    <rect key="frame" x="12" y="3" width="41" height="22"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="YApp" id="xzp-wK-dxe">
                         <font key="font" metaFont="system" size="15"/>
                         <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
@@ -25,11 +24,11 @@
                     </textFieldCell>
                 </textField>
                 <searchField wantsLayer="YES" focusRingType="none" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MmW-Nx-C7z">
-                    <rect key="frame" x="68" y="3" width="276" height="25"/>
+                    <rect key="frame" x="59" y="3" width="285" height="25"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="25" id="xNg-gc-FWv"/>
                     </constraints>
-                    <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" continuous="YES" refusesFirstResponder="YES" borderStyle="bezel" focusRingType="none" placeholderString="type to search..." usesSingleLineMode="YES" bezelStyle="round" id="oKU-5I-XAd">
+                    <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" continuous="YES" refusesFirstResponder="YES" borderStyle="bezel" focusRingType="none" placeholderString="type to AI..." usesSingleLineMode="YES" bezelStyle="round" id="oKU-5I-XAd">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
